github-custom-width.css
/**
 * @name GitHub custom width
 * @stylish-id 113930
 * @author Niklas Gollenstede
 * @licence CC-BY-SA-4.0 or MIT
 * @description
 *     Makes GitHubs main column wider, to use more of large screens.
 *     This uses css 'calc' rules, so that is works at any width. Especially on smaller screens, it defaults to the standard width.
 *     You can also choose the max-width.
 *
 *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
 */

@-moz-document
    regexp("^https://(\w+\.)?github\.com(\/.*?)*$"),
    url-prefix("/*[[additionalUrl]]*/")
{
    .container {
        width: calc(80%);
        min-width: 980px;
        max-width: 1380px;
        max-width: /*[[columnMaxWidth]]*/;
    }
    .repository-with-sidebar .repository-content {
        width: calc(100% - 60px);
    }
    .repository-with-sidebar.with-full-navigation .repository-content {
        width: calc(100% - 210px);
    }
    .discussion-timeline {
        width: calc(100% - 160px);
    }
    .org-main {
        width: calc(100% - 280px);
    }
    .news {
        width: calc(100% - 360px);
    }
    .timeline-new-comment {
        max-width: unset;
    }
    .container .column.files {
        width: calc(100% - 188px);
    }
    .container .settings-content {
        width: calc(100% - 265px);
    }

    .message .css-truncate-target a:only-child:before {
        content: attr(title);
        padding-right: 9999px;
    }
    .message .css-truncate-target a:only-child {
        display: block;
    }
}

